# comite-sanitario

./: .env.db  .gitignore  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: comite_sanitario.sql
backend/src/: main.rs
comite_api/: Dockerfile  cloudmigrate.yaml  manage.py  wsgi.ini
comite_api/comite_api/: asgi.py  settings.py  urls.py  wsgi.py
comite_api/core/: admin.py  models.py  serializers.py  views.py
comite_api/core/migrations/: 0001_initial.py  0002_auto_20210717_2014.py  0003_auto_20210725_1240.py  0004_alter_person_age.py  0005_auto_20210725_1244.py  0006_auto_20210725_1246.py  0007_create_superuser.py
comite_api/requirements/: requirements.txt
comite_front/: .env_example  README.md  package.json
comite_front/public/: index.html
comite_front/src/: App.js  index.js  routes.js
comite_front/src/actions/: donationActions.js  index.js  notificationActions.js  peopleActions.js  sessionActions.js
comite_front/src/components/: AuthGuard.js  ColorManyPicker.js  ColorPreview.js  DonationForm.js  Label.js  Logo.js  Map.js  MenuPopover.js  NavSection.js  Page.js  PersonFormDialog.js  ScrollToTop.js  Scrollbar.js  SearchNotFound.js  SvgIconStyle.js  personFormDialog.js
comite_front/src/layouts/: LogoOnlyLayout.js
comite_front/src/pages/: DashboardApp.js  Donation.js  Login.js  User.js
comite_front/src/reducers/: donationReducer.js  index.js  notificationReducer.js  peopleReducer.js  sessionReducer.js
comite_front/src/services/: api.js  auth.js
comite_front/src/store/: configureStore.js  localStorage.js
(+19 files in other folders)
