[package]
name = "backend"
version = "0.1.0"
authors = ["tiago-lp <tiagolprr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
# diesel = { version = "1.4.5", features = ["postgres"] }
# dotenv = "0.15.0"
# diesel_migrations = "1.4.0"
uuid = "0.8.1"
